# CelsiusPulse

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
config/docker/: docker-compose.yml
data/: admins.json.example  thresholds.json.example
docs/: CODE_REVIEW.md  CONTRIBUTING.md  README.md
scripts/: unblock_bigboss.py
src/: __init__.py
src/bot/: __init__.py  keyboards.py  messages.py  utils.py
src/bot/handlers/: __init__.py  admin.py  callbacks.py  commands.py  input_handlers.py  registration_handlers.py
src/config/: __init__.py  logging.py  settings.py
src/core/: __init__.py  auth.py  menu_manager.py  monitoring.py  registration_manager.py  storage.py  threshold_context_manager.py
src/services/: bot_service.py
src/utils/: __init__.py  security.py  validators.py
tests/: README.md  __init__.py  conftest.py  test_auth.py  test_bot_commands.py  test_integration.py  test_monitoring.py  test_notifications.py  test_simple.py
